feat: создать блоки css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,73 @@
     <title>New Mesto</title>
 </head>
 <body>
-    
+    <div class="root">
+        <div class="wrapper">
+            <header class="header">
+                <img src="" alt="logo" class="header__logo">
+            </header>
+            <main class="main">
+                <section class="profile">
+                    <div class="profile__info">
+                        <img src="" alt="avatar" class="info__avatar">
+                        <div class="info__text-block">
+                            <h2 class="info__name"></h2>
+                            <h3 class="info__job"></h3>
+                        </div>
+                        <img src="./images/Edit Button.svg" alt="edit-button" class="info__edit-button">
+                    </div>
+                    <img src="./images/Add Button.svg" alt="add-button" class="add-button">
+                </section>
+                <section class="card-grid">
+                    <div class="card">
+                        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="pic" class="card__img">
+                        <div class="card__info">
+                            <h4 class="card__city"></h4>
+                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/kirill-pershin-1088404-unsplash.png" alt="pic" class="card__img">
+                        <div class="card__info">
+                            <h4 class="card__city"></h4>
+                            <src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/kirill-pershin-1404681-unsplash(1).png" alt="pic" class="card__img">
+                        <div class="card__info">
+                            <h4 class="card__city"></h4>
+                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/kirill-pershin-1404681-unsplash.png" alt="pic" class="card__img">
+                        <div class="card__info">
+                            <h4 class="card__city"></h4>
+                            <img src="" alt="" class="card__like-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/kirill-pershin-1556355-unsplash(1).png" alt="pic" class="card__img">
+                        <div class="card__info">
+                            <h4 class="card__city"></h4>
+                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="pic" class="card__img">
+                        <div class="card__info">
+                            <h4 class="card__city"></h4>
+                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                        </div>
+                    </div>
+                </section>
+            </main>
+            <footer class="footer">
+                <h4 class="footer__copyright"></h4>
+            </footer>
+        </div>
+    </div>
     
 </body>
 </html>
