fix: правка разметки

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <div class="root">
         <div class="wrapper">
             <header class="header">
-                <img src="" alt="logo" class="header__logo">
+                <img src="./images/Vector.svg" alt="logo" class="header__logo">
             </header>
             <main class="main">
                 <section class="profile">
                     <div class="profile__info">
-                        <img src="" alt="avatar" class="info__avatar">
+                        <img src="./images/image.jpg" alt="avatar" class="info__avatar">
                         <div class="info__text-block">
                             <h2 class="info__name"></h2>
                             <h3 class="info__job"></h3>
@@ -27,7 +27,7 @@
                     <div class="card">
                         <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="pic" class="card__img">
                         <div class="card__info">
-                            <h4 class="card__city"></h4>
+                            <h4 class="card__place"></h4>
                             <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
                         </div>
                     </div>
@@ -35,7 +35,7 @@
                         <img src="./images/kirill-pershin-1088404-unsplash.png" alt="pic" class="card__img">
                         <div class="card__info">
                             <h4 class="card__city"></h4>
-                            <src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
                         </div>
                     </div>
                     <div class="card">
