--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" sizes="16x16"
+    href="./images/favicon.ico">
+    <link rel="stylesheet" href="./style.css">
     <title>New Mesto</title>
 </head>
 <body>
@@ -10,66 +13,65 @@
         <div class="wrapper">
             <header class="header">
                 <img src="./images/Vector.svg" alt="logo" class="header__logo">
+                <hr class="header__underline">
             </header>
             <main class="main">
                 <section class="profile">
-                    <div class="profile__info">
-                        <img src="./images/image.jpg" alt="avatar" class="info__avatar">
-                        <div class="info__text-block">
-                            <h2 class="info__name"></h2>
-                            <h3 class="info__job"></h3>
-                        </div>
-                        <img src="./images/Edit Button.svg" alt="edit-button" class="info__edit-button">
+                    <div class="info">
+                            <img src="./images/image.jpg" alt="avatar" class="info__avatar">
+                            <h2 class="info__name">Жак-Ив Кусто</h2>
+                            <img src="./images/Edit Button.svg" alt="edit-button" class="info__edit-button">
+                            <h3 class="info__job">Исследователь океана</h3>
+                            <img src="./images/Add Button.svg" alt="add-button" class="add-button">
                     </div>
-                    <img src="./images/Add Button.svg" alt="add-button" class="add-button">
                 </section>
                 <section class="card-grid">
                     <div class="card">
-                        <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="pic" class="card__img">
+                        <img src="./images/kirill-pershin-1556355-unsplash.png" alt="pic" class="card__img">
                         <div class="card__info">
-                            <h4 class="card__place"></h4>
-                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                            <h4 class="card__place">Карачаевск</h4>
+                            <img src="./images/Group.svg" alt="like-icon" class="card__like-icon">
                         </div>
                     </div>
                     <div class="card">
                         <img src="./images/kirill-pershin-1088404-unsplash.png" alt="pic" class="card__img">
                         <div class="card__info">
-                            <h4 class="card__city"></h4>
-                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                            <h4 class="card__place">Гора Эльбрус</h4>
+                            <img src="./images/Group.svg" alt="like-icon" class="card__like-icon">
                         </div>
                     </div>
                     <div class="card">
                         <img src="./images/kirill-pershin-1404681-unsplash(1).png" alt="pic" class="card__img">
                         <div class="card__info">
-                            <h4 class="card__city"></h4>
-                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                            <h4 class="card__place">Домбай</h4>
+                            <img src="./images/Group.svg" alt="like-icon" class="card__like-icon">
                         </div>
                     </div>
                     <div class="card">
                         <img src="./images/kirill-pershin-1404681-unsplash.png" alt="pic" class="card__img">
                         <div class="card__info">
-                            <h4 class="card__city"></h4>
-                            <img src="" alt="" class="card__like-icon">
+                            <h4 class="card__place">Гора Эльбрус</h4>
+                            <img src="./images/Group.svg" alt="" class="card__like-icon">
                         </div>
                     </div>
                     <div class="card">
                         <img src="./images/kirill-pershin-1556355-unsplash(1).png" alt="pic" class="card__img">
                         <div class="card__info">
-                            <h4 class="card__city"></h4>
-                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                            <h4 class="card__place">Карачаевск</h4>
+                            <img src="./images/Group.svg" alt="like-icon" class="card__like-icon">
                         </div>
                     </div>
                     <div class="card">
                         <img src="./images/kirill-pershin-1556355-unsplash.png" alt="pic" class="card__img">
                         <div class="card__info">
-                            <h4 class="card__city"></h4>
-                            <img src="./images/Vector.png" alt="like-icon" class="card__like-icon">
+                            <h4 class="card__place">Домбай</h4>
+                            <img src="./images/Group.svg" alt="like-icon" class="card__like-icon">
                         </div>
                     </div>
                 </section>
             </main>
             <footer class="footer">
-                <h4 class="footer__copyright"></h4>
+                <h4 class="footer__copyright">© 2020 Mesto Russia</h4>
             </footer>
         </div>
     </div>
