remove trash code from index.htmml

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <section class="focus popup_closed">
         <div class="focus__container">
             <buttton class="focus__close-bttn"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img"></buttton>
-            <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="" class="focus__img">
-            <h4 class="focus__info">Задаём тегу a атрибут href</h4>
+            <img src="" alt="" class="focus__img">
+            <h4 class="focus__info">З</h4>
         </div>
     </section>
     <script src="./index.js"></script>
