--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h3 class="info__job">Исследователь океана</h3>
                         <img src="./images/Add Button.svg" alt="add-button" class="add-button">
                     </div>
-                </section>
+                </section>x
                 <section class="card-grid">
                     <template id="cardTemplate">
                         <div class="card">
@@ -78,8 +78,9 @@
             <h4 class="focus__info">З</h4>
         </div>
     </section>
-    <script src="./script/utils.js"></script>
-    <script src="./script/validate.js"></script>
-    <script src="./script/index.js"></script>
+    <script type="module" src="./scsript/utils.js"></script>
+    <script type="module" src="./script/FormValidator.js"></script>
+    <script type="module" src="./script/Card.js"></script>
+    <script type="module" src="./script/index.js"></script>
 </body>
 </html>
