finish section class

--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
             <h4 class="focus__info">З</h4>
         </div>
     </section>
-    <script type="module" src="./scsript/utils.js"></script>
+    <script type="module" src="./script/utils.js"></script>
+    <script type="module" src="./script/Popup.js"></script>
     <script type="module" src="./script/FormValidator.js"></script>
     <script type="module" src="./script/Card.js"></script>
+    <script type="module" src="./script/Section.js"></script>
     <script type="module" src="./script/index.js"></script>
 </body>
 </html>
