--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="root">
         <div class="wrapper">
             <header class="header">
-                <img src="./images/Vector.svg" alt="logo" class="header__logo">
+                <img src="./images/Vecсtor.svg" alt="logo" class="header__logo">
                 <hr class="header__underline">
             </header>
             <main class="main">
@@ -45,7 +45,7 @@
     </div>
     <section class="popup popup-user popup_closed ">
         <div class="popup__container">
-            <button type="button" class="popup__close-button"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img">
+            <button type="button" class="popup__close-button close-button"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img">
             </button>
             <form action="" class="info-edit" name="userData">        
                 <h3 class="info-edit__header">Редактировать профиль</h3>
@@ -59,7 +59,7 @@
     </section>
     <section class="popup popup-card popup_closed ">
         <div class="popup__container">
-            <button type="button" class="popup__close-button"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img">
+            <button type="button" class="popup__close-button close-button"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img">
             </button>
             <form action="" class="info-edit" name="newCard">        
                 <h3 class="info-edit__header">Новое место</h3>
@@ -73,16 +73,16 @@
     </section>
     <section class="focus popup_closed">
         <div class="focus__container">
-            <buttton class="focus__close-bttn"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img"></buttton>
+            <buttton class="focus__close-bttn close-button"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img"></buttton>
             <img src="" alt="" class="focus__img">
             <h4 class="focus__info">З</h4>
         </div>
     </section>
-    <script type="module" src="./script/utils.js"></script>
-    <script type="module" src="./script/Popup.js"></script>
-    <script type="module" src="./script/FormValidator.js"></script>
-    <script type="module" src="./script/Card.js"></script>
-    <script type="module" src="./script/Section.js"></script>
-    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="./utils/constants.js"></script>
+    <script type="module" src="./components/Popup.js"></script>
+    <script type="module" src="./components/FormValidator.js"></script>
+    <script type="module" src="./components/Card.js"></script>
+    <script type="module" src="./components/Section.js"></script>
+    <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
