finish classes refactoring

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h3 class="info__job">Исследователь океана</h3>
                         <img src="./images/Add Button.svg" alt="add-button" class="add-button">
                     </div>
-                </section>x
+                </section>
                 <section class="card-grid">
                     <template id="cardTemplate">
                         <div class="card">
@@ -43,7 +43,7 @@
             </footer>
         </div>
     </div>
-    <section class="popup popup-user popup_closed ">
+    <section class="popup popup-user popup_closed overlay">
         <div class="popup__container">
             <button type="button" class="popup__close-button close-button"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img">
             </button>
@@ -57,7 +57,7 @@
             </form>
         </div>
     </section>
-    <section class="popup popup-card popup_closed ">
+    <section class="popup popup-card popup_closed overlay">
         <div class="popup__container">
             <button type="button" class="popup__close-button close-button"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img">
             </button>
@@ -72,10 +72,10 @@
         </div>
     </section>
     <section class="focus popup_closed">
-        <div class="focus__container">
+        <div class="focus__container overlay">
             <buttton class="focus__close-bttn close-button"><img src="./images/Close Icon.svg" alt="" class="popup__close-button-img"></buttton>
             <img src="" alt="" class="focus__img">
-            <h4 class="focus__info">З</h4>
+            <h4 class="focus__info overlay">З</h4>
         </div>
     </section>
     <script type="module" src="./utils/constants.js"></script>
