finish noAPI part

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
             </form>
         </div>
     </section>
-    <section class="popup popup_closed overlay">
+    <section class="popup popup_closed overlay popup__delete">
         <div class="popup__container popup__delete-card-container">
             <button class="popup__close-button close-button"><img src="<%= require('./images/Close Icon.svg').default %>" alt="" class="popup__close-button-img"></button>
             <form action="" class="info-edit" name='deleteCard'>
